src/objects/WO_Permit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WO Permits</relationshipLabel>
        <relationshipName>WO_Permits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <label>Permit</label>
        <referenceTo>Permit__c</referenceTo>
        <relationshipLabel>WO Permits</relationshipLabel>
        <relationshipName>WO_Permits</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>WO Permit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WO Permits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WO Permits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>